--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -2,5 +2,6 @@
 @import './base/base';
 
 @import './components/sidebar';
-@import './components/general';
 @import './components/buttons';
+@import './components/home';
+@import './components/navbar';
