--- a/src/styles/components/_buttons.scss
+++ b/src/styles/components/_buttons.scss
@@ -1,7 +1,14 @@
 .sidebar-btn{
     background-color: transparent;
-    color: white;
+    color: rgb(126, 126, 126);
     cursor: pointer;
-    font-size: 14px;
+    font-size: 16px;
     font-weight: bold;
+    border: none;
+    display: flex;
+    align-items: center;
+
+    &.active{
+        color: white;
+    }
 }
