--- a/src/styles/components/_navbar.scss
+++ b/src/styles/components/_navbar.scss
@@ -1,8 +1,10 @@
 .navbar{
     align-items: center;
-    background-color: black;
+    background-color: transparent;
     color: white;
     display: flex;
     justify-content: space-between;
     padding: 10px 20px 10px 20px;
+    width: 100vw;
+    height: 30px;
 }
