--- a/src/styles/base/_settings.scss
+++ b/src/styles/base/_settings.scss
@@ -1,5 +1,6 @@
 // Spotify Colors Palette 
 
-$black: #191414;
+$black: #121212;
+$top-grad: #404040;
 $green-primary: #1db954;
 $green-secondary: #1ed760;
