--- a/src/styles/base/_base.scss
+++ b/src/styles/base/_base.scss
@@ -23,3 +23,10 @@ main {
     width: 100%;
     overflow: hidden;
 }
+.main-content{
+    display: flex;
+}
+h3{
+    color: white;
+    font-weight: bold;
+}
