--- a/src/styles/components/_home.scss
+++ b/src/styles/components/_home.scss
@@ -12,5 +12,14 @@
     display: flex;
     place-items: center;
     flex-direction: row;
+    display: grid;
+        grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
+        grid-template-rows: 1fr 1fr;
+        gap: 0px 0px;
+        grid-auto-flow: row;
+        grid-template-areas:
+          ". . . . . "
+          ". . . . . ";
+      
 
 }
