--- a/src/styles/components/_buttons.scss
+++ b/src/styles/components/_buttons.scss
@@ -12,3 +12,43 @@
         color: white;
     }
 }
+
+.play-icon{
+    position: absolute;
+    top: 45%;
+    right: 12%;
+    transform: translateY(10px);
+    filter: drop-shadow(0 0.5rem 1rem rgba(0,0,0,0.4));
+    opacity: 1;
+    transition: all 0.4s;
+
+}
+
+.card-container:hover .play-icon{
+    opacity: 1;
+    transform: translateY(0);
+}
+
+.card-container:hover{
+    background-color: #222;
+}
+
+.circle{
+    width: 3.5rem;
+    height: 3.5rem;
+    border-radius: 50%;
+    background-color: $green-primary;
+    display: grid;
+    place-items: center;
+}
+
+.triangle{
+    width: 0;
+    height: 0;
+    border-left: 10px solid transparent;
+    border-right: 10px solid transparent;
+    border-bottom: 18px solid black;
+    transform: rotate(90deg);
+    margin-left: 0.2rem;
+}
+
