--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -5,4 +5,5 @@
 @import './components/buttons';
 @import './components/home';
 @import './components/navbar';
-@import './components/cards'
+@import './components/cards';
+@import './components/channel';
