--- a/src/styles/components/_buttons.scss
+++ b/src/styles/components/_buttons.scss
@@ -52,3 +52,10 @@
     margin-left: 0.2rem;
 }
 
+.btn-play {
+    background: none;
+    width: 100px;
+    height: 40px;
+    cursor: pointer;
+    border: none;
+}
