--- a/src/styles/base/_base.scss
+++ b/src/styles/base/_base.scss
@@ -23,8 +23,32 @@ main {
     width: 100%;
     overflow: hidden;
 }
+::-webkit-scrollbar {
+    width: 16px;
+    height: 16px;
+  }
+  ::-webkit-scrollbar-button {
+    width: 0px;
+    height: 0px;
+  }
+  ::-webkit-scrollbar-thumb {
+    background: hsla(0,0%,100%,.3);
+    border-radius: 0px;
+  }
+  ::-webkit-scrollbar-thumb:hover {
+    background: hsla(0,0%,100%,.5);
+  }
+  ::-webkit-scrollbar-thumb:active {
+    background: hsla(0,0%,100%,.5);
+  }
 .main-content{
-    display: flex;
+    min-height: 100vh;
+    width: 100%;
+    height: 100vh;
+    overflow-y: hidden;
+    position: relative;
+    display: grid;
+    grid-template-columns: auto 1fr;
 }
 h3{
     color: white;
