--- a/src/styles/components/_channel.scss
+++ b/src/styles/components/_channel.scss
@@ -16,3 +16,20 @@
     width: 80vw;
     height: 50%;
 }
+.header-title{
+    color: white;
+}
+.header-subtitle{
+
+    color: white;
+}
+.logo-container{
+    width: 13rem;
+
+}
+.img{
+    object-fit: cover;
+}
+.header-description{
+    color: white;
+}
