--- a/src/styles/components/_buttons.scss
+++ b/src/styles/components/_buttons.scss
@@ -56,6 +56,35 @@
     background: none;
     width: 100px;
     height: 40px;
-    cursor: pointer;
     border: none;
+}
+.card-footer-container{
+    display: flex;
+    align-items: center;
+    justify-content: flex-start;
+}
+.card-footer-img{
+    width: 56px;
+    height: 56px;
+}
+.card-footer-img img{
+    width: 100%;
+    height: 100%;
+}
+.card-footer-details{
+    margin-left: 16px;
+    margin-right: 16px;
+}
+.card-footer-title{
+    font-size: 14px;
+    font-weight: 400;
+    line-height: 16px;
+    letter-spacing: normal;
+    text-transform: none;
+}
+
+.right-footer{
+    display: flex;
+    align-items: center;
+    justify-content: flex-end;
 }
