--- a/src/styles/components/_home.scss
+++ b/src/styles/components/_home.scss
@@ -10,17 +10,45 @@
 
 .recommended-content{
     margin-top: 40px;
+    margin-right: 15px;
+
     display: flex;
     place-items: center;
     flex-direction: row;
     display: grid;
-        grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
+        grid-template-columns: 0.5fr 0.5fr 0.5fr 0.5fr 0.5fr  0.5fr  ;
         grid-template-rows: 1fr 1fr;
         gap: 0px 0px;
         grid-auto-flow: row;
         grid-template-areas:
-          ". . . . . "
-          ". . . . . ";
+          ". . . . . . "
+          ". . . . . . ";
       
 
+}
+
+.home-sections{
+    padding: 0 32px;
+    padding-top: 24px;
+}
+
+.section-title{
+    margin-bottom: 22px;
+}
+
+.section-title h1{
+    font-size: 32px;
+    font-weight: 700;
+    line-height: 36px;
+    letter-spacing: -.04em;
+    text-transform: none;
+    color: white;
+}
+.horizontal-cards{
+    display: grid;
+    grid-template-columns: repeat(auto-fill,minmax(180px,1fr));
+    row-gap: 16px;
+    column-gap: 24px;
+    max-height: 176px;
+    overflow-y: hidden;
 }
