channel screen pulido

--- a/src/styles/base/_settings.scss
+++ b/src/styles/base/_settings.scss
@@ -1,6 +1,6 @@
 // Spotify Colors Palette 
 
 $black: #121212;
-$top-grad: #404040;
+$top-grad: #141a65b5;
 $green-primary: #1db954;
 $green-secondary: #1ed760;
