--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -7,4 +7,5 @@
 @import './components/navbar';
 @import './components/cards';
 @import './components/channel';
-@import './components/footer'
+@import './components/footer';
+@import './components/searchbar';
