--- a/src/styles/base/_base.scss
+++ b/src/styles/base/_base.scss
@@ -1,21 +1,26 @@
 * {
-    font-family: 'Nunito', sans-serif !important;
+    font-family: 'Montserrat', sans-serif;
     margin: 0px;
     user-select: none;
 
     &::-webkit-scrollbar {
         height: .8em;
         width: .8em;
+      
     }
     
     &::-webkit-scrollbar-track {
-        background: white;
+        background: transparent;
         box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+        
+        
     }
+
 }
 html, body {
     height: 100vh;
     width: 100vw; 
+    
 }
 
 main {
@@ -25,14 +30,14 @@ main {
 }
 ::-webkit-scrollbar {
     width: 16px;
-    height: 16px;
+    height: 5px;
   }
   ::-webkit-scrollbar-button {
     width: 0px;
     height: 0px;
   }
   ::-webkit-scrollbar-thumb {
-    background: hsla(0,0%,100%,.3);
+    background: rgba(110, 110, 110, 0.3);
     border-radius: 0px;
   }
   ::-webkit-scrollbar-thumb:hover {
@@ -53,4 +58,35 @@ main {
 h3{
     color: white;
     font-weight: bold;
+}
+.loader{
+  align-items: center;
+	background-color: black;
+    color: white;
+    display: flex;
+    flex-direction: column;
+    height: 100%;
+    justify-content: center;
+    overflow: hidden;
+    position: fixed;
+    top: 0; left: 0;
+    width: 100%; 
+}
+
+.loader-element {
+  background: white;
+  border-radius: 2rem;
+height: 10px;
+  margin-top: 5px;
+width: 30%;
+}
+
+.loader-element:before {
+  background-color: $gray;
+  border-radius: 2rem;
+content: '';
+display: block;
+height: 10px;
+width: 0;
+  animation: getWidth .3s ease-in;
 }
