--- a/src/styles/components/_home.scss
+++ b/src/styles/components/_home.scss
@@ -26,6 +26,18 @@
       
 
 }
+.recommended-channels-content{
+    margin-top: 40px;
+    margin-right: 15px;
+    display: flex;
+    place-items: center;
+    flex-direction: row;
+    display: grid;
+    grid-template-columns: 0.5fr 0.5fr 0.5fr 0.5fr 0.5fr  0.5fr  ;
+    margin-bottom: 20px;
+      
+
+}
 
 .home-sections{
     padding: 0 32px;
@@ -38,13 +50,22 @@
 }
 
 .section-title h1{
-    font-size: 32px;
+    font-size: 25px;
     font-weight: 700;
     line-height: 36px;
     letter-spacing: -.04em;
     text-transform: none;
     color: white;
 }
+.section-title h2{
+    font-size: 32px;
+    font-weight: 700;
+    line-height: 36px;
+    letter-spacing: -.04em;
+    text-transform: none;
+    color: gray;
+}
+
 
 .horizontal-cards{
     display: grid;
@@ -53,5 +74,21 @@
     column-gap: 24px;
     max-height: 176px;
     overflow-y: hidden;
+    margin-bottom: 30px;
+}
+.results-content{
+    display: grid;
+            grid-template-columns: 0.5fr 0.5fr 0.5fr 0.5fr 0.5fr  0.5fr  ;
+        grid-template-rows: 1fr 1fr;
+        gap: 0px 0px;
+        grid-auto-flow: row;
+        grid-template-areas:
+          ". . . . . ."
+          ". . . . . .";
+      
+    row-gap: 60px;
+    column-gap: 10px;
+    max-height: 500px;
+    overflow-X: hidden;
     margin-bottom: 30px;
 }
