--- a/src/styles/components/_navbar.scss
+++ b/src/styles/components/_navbar.scss
@@ -1,10 +1,50 @@
 .navbar{
-    align-items: center;
+    position: sticky;
+    top: 0;
+    right: 0;
+    left: 0;
+    height: 60px;
+    z-index: 99;
     background-color: transparent;
-    color: white;
+}
+.navbar-search{
+    position: relative;
+    max-width: 368px;
+}
+.prev-next{
+    color: rgb(255, 255, 255);
+    top: 8px;
+    left: 12px;
+    background: rgba(0, 0, 0, 0.184);
+    border-radius: 50px;
+    border: none;
+    width: 40px;
+    height: 40px;
+}
+.navbar div{
+    padding: 0px 32px;
+    height: 60px;
     display: flex;
+    align-items: center;
     justify-content: space-between;
-    padding: 10px 20px 10px 20px;
-    width: 100vw;
-    height: 30px;
+}
+
+.navbar div div{
+    position: relative;
+    margin: 0;
+    padding: 0;
+    display: inline-block;
+    height: auto;
+}
+.navbar span {
+    display: flex;
+    align-items: center;
+}
+.profile-btn{
+    border: none;
+    height: 32px;
+    padding: 0px 16px;
+    border-radius: 16px;
+    background-color: rgba(0,0,0,.7);
+    color: #fff;
 }
