--- a/src/styles/base/_base.scss
+++ b/src/styles/base/_base.scss
@@ -82,7 +82,7 @@ width: 30%;
 }
 
 .loader-element:before {
-  background-color: $gray;
+  background-color: gray;
   border-radius: 2rem;
 content: '';
 display: block;
