--- a/src/styles/components/_footer.scss
+++ b/src/styles/components/_footer.scss
@@ -3,7 +3,7 @@
     left: 0;
     right: 0;
     bottom: 0;
-    height: auto;
+    height: 100px;
     width: 100%;
     z-index: 9;
 }
@@ -12,7 +12,7 @@
     grid-template-columns: 30% 40% 30%;
     background-color: #181818;
     border-top: 1px solid #282828;
-    padding: 17px 16px;
+    padding: 12px 10px;
     color: #fff;
 }
 
@@ -21,3 +21,112 @@
     flex-direction: column;
     align-items: center;
 }
+.control-player{
+    width: 224px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    margin-bottom: 0px;
+
+}
+.range-slider{
+    width: 100%;
+    display: flex;
+    justify-content: center;
+}
+
+.range{
+    height: 40px;
+    width: 380px;
+    background: none;
+    border-radius: 10px;
+    padding: 0 65px 0 45px;
+
+  }
+  .sliderValue{
+    position: relative;
+    width: 100%;
+  }
+  .sliderValue span{
+    position: absolute;
+    height: 45px;
+    width: 45px;
+    transform: translateX(-70%) scale(0);
+    font-weight: 500;
+    top: -40px;
+    line-height: 55px;
+    z-index: 2;
+    color: #fff;
+    transform-origin: bottom;
+    transition: transform 0.3s ease-in-out;
+  }
+  .sliderValue span.show{
+    transform: translateX(-70%) scale(1);
+  }
+  .sliderValue span:after{
+    position: absolute;
+    content: '';
+    height: 100%;
+    width: 100%;
+    background: #664AFF;
+    border: 3px solid #fff;
+    z-index: -1;
+    left: 50%;
+    transform: translateX(-50%) rotate(45deg);
+    border-bottom-left-radius: 50%;
+    box-shadow: 0px 0px 8px rgba(0,0,0,0.1);
+    border-top-left-radius: 50%;
+    border-top-right-radius: 50%;
+  }
+  .field{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 100%;
+    position: relative;
+  }
+  .field .value{
+    position: absolute;
+    font-size: 18px;
+    color: gray;
+    font-weight: 600;
+  }
+  .field .value.left{
+    left: -22px;
+  }
+  .field .value.right{
+    right: -50px;
+  }
+  .range input{
+    -webkit-appearance: none;
+    width: 100%;
+    height: 3px;
+    background: $green-primary;
+    border-radius: 5px;
+    outline: none;
+    border: none;
+    z-index: 2222;
+  }
+  .range input::-webkit-slider-thumb{
+    -webkit-appearance: none;
+    width: 10px;
+    height: 10px;
+    background: red;
+    border-radius: 50%;
+    background: white;
+    border: 1px solid $green-primary;
+    cursor: pointer;
+  }
+  .range input::-moz-range-thumb{
+    -webkit-appearance: none;
+    width: 20px;
+    height: 20px;
+    background: red;
+    border-radius: 50%;
+    background: #664AFF;
+    border: 1px solid #664AFF;
+    cursor: pointer;
+  }
+  .range input::-moz-range-progress{
+    background: $green-primary; //this progress background is only shown on Firefox
+  }
