--- a/src/styles/components/_home.scss
+++ b/src/styles/components/_home.scss
@@ -33,8 +33,13 @@
     place-items: center;
     flex-direction: row;
     display: grid;
-    grid-template-columns: 0.5fr 0.5fr 0.5fr 0.5fr 0.5fr  0.5fr  ;
-    margin-bottom: 20px;
+        grid-template-columns: 0.5fr 0.5fr 0.5fr 0.5fr 0.5fr  0.5fr  ;
+        grid-template-rows: 1fr ;
+        gap: 0px 0px;
+        grid-auto-flow: row;
+        grid-template-areas:
+          ". . . . . ."
+          ". . . . . .";
       
 
 }
