--- a/src/styles/components/_footer.scss
+++ b/src/styles/components/_footer.scss
@@ -43,6 +43,15 @@
     padding: 0 65px 0 45px;
 
   }
+
+  .range-volume{
+    height: 40px;
+    width: 100px;
+    background: none;
+    border-radius: 10px;
+    padding: 0 65px 0 20px;
+
+  }
   .sliderValue{
     position: relative;
     width: 100%;
@@ -85,6 +94,13 @@
     height: 100%;
     position: relative;
   }
+  .field-volume{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 100%;
+    position: relative;
+  }
   .field .value{
     position: absolute;
     font-size: 18px;
@@ -102,6 +118,16 @@
     width: 100%;
     height: 3px;
     background: $green-primary;
+    border-radius: 5px;
+    outline: none;
+    border: none;
+    z-index: 2222;
+  }
+  .range-volume input{
+    -webkit-appearance: none;
+    width: 100%;
+    height: 3px;
+    background: gray;
     border-radius: 5px;
     outline: none;
     border: none;
