--- a/src/styles/components/_channel.scss
+++ b/src/styles/components/_channel.scss
@@ -136,6 +136,12 @@
     margin-bottom: 20px;
 
 }
+.channel-details-body{
+    padding-left: 50px;
+}
+.play-container{
+    margin-bottom: 20px;
 
+}
 
 
