--- a/src/styles/components/_channel.scss
+++ b/src/styles/components/_channel.scss
@@ -9,7 +9,7 @@
 
 .header-content{
     align-items: center;
-    background-color: linear-gradient(to bottom, $top-grad -50%, $black 25%);
+    background-image: linear-gradient(to bottom, $top-grad -50%, $black 25%);
     height: 100%;
     color: white;
     display: flex;
