--- a/src/styles/components/_buttons.scss
+++ b/src/styles/components/_buttons.scss
@@ -7,7 +7,7 @@
     border: none;
     display: flex;
     align-items: center;
-
+    text-decoration: none;
     &.active{
         color: white;
         border-radius: 3px;
@@ -26,6 +26,7 @@
     margin-top: 15px;
     padding: 10px;
     border-radius: 5px;
+    text-decoration: none;
 
 
 }
